Add create note activity(temp)

--- a/Note/src/main/AndroidManifest.xml
+++ b/Note/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity android:name=".startup.SplashActivity"
+        <activity
+            android:name=".startup.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".note.CreateNoteActivity"></activity>
     </application>
 
 </manifest>
